--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Practica3
+application.vendor=usuario
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -20,14 +21,39 @@ debug.classpath=\
     ${run.classpath}
 debug.test.classpath=\
     ${run.test.classpath}
+# Files in build.classes.dir which should be excluded from distribution jar
+dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/KataV1.jar
+dist.jar=${dist.dir}/Practica3.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.hamcrest-core-1.3.jar=lib/hamcrest-core-1.3.jar
+file.reference.jcommon-1.0.23.jar=lib/jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19-experimental.jar=lib/jfreechart-1.0.19-experimental.jar
+file.reference.jfreechart-1.0.19-swt.jar=lib/jfreechart-1.0.19-swt.jar
+file.reference.jfreechart-1.0.19.jar=lib/jfreechart-1.0.19.jar
+file.reference.jfreesvg-2.0.jar=lib/jfreesvg-2.0.jar
+file.reference.junit-4.11.jar=lib/junit-4.11.jar
+file.reference.orsoncharts-1.4-eval-nofx.jar=lib/orsoncharts-1.4-eval-nofx.jar
+file.reference.orsonpdf-1.6-eval.jar=lib/orsonpdf-1.6-eval.jar
+file.reference.servlet.jar=lib/servlet.jar
+file.reference.swtgraphics2d.jar=lib/swtgraphics2d.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19-experimental.jar}:\
+    ${file.reference.jfreechart-1.0.19-swt.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jfreesvg-2.0.jar}:\
+    ${file.reference.junit-4.11.jar}:\
+    ${file.reference.orsoncharts-1.4-eval-nofx.jar}:\
+    ${file.reference.orsonpdf-1.6-eval.jar}:\
+    ${file.reference.servlet.jar}:\
+    ${file.reference.swtgraphics2d.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -51,7 +77,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=katav1.KataV1
+main.class=practica3.Practica3
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
